# zed

./: Cargo.toml  Info.plist
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: jetbrains.json
assets/keymaps/macos/: jetbrains.json
assets/settings/: default.json
crates/activity_indicator/src/: activity_indicator.rs
crates/agent_ui/src/: agent_panel.rs  agent_thread_item.rs  agent_ui.rs  entry_view_state.rs
crates/backlinks_panel/: Cargo.toml
crates/backlinks_panel/src/: backlinks_panel.rs  lib.rs
crates/client/src/: telemetry.rs
crates/collab/: Cargo.toml
crates/collab/src/: db.rs  rpc.rs
crates/collab_ui/src/: channel_view.rs
crates/docs_preprocessor/src/: main.rs
crates/edit_prediction_cli/: Cargo.toml
crates/edit_prediction_cli/src/: headless.rs
crates/edit_prediction_ui/src/: rate_prediction_modal.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  code_actions.rs  code_context_menus.rs  config.rs  display_map.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  inlays.rs  items.rs  mouse_context_menu.rs  navigation.rs  persistence.rs  runnables.rs  split.rs
crates/eval_cli/: Cargo.toml
crates/eval_cli/src/: headless.rs
crates/extension/: Cargo.toml
crates/extension/src/: extension.rs  extension_host_proxy.rs  types.rs  (+1 more)
crates/extension_host/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/project/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/zed/: Cargo.toml
docs/src/: SUMMARY.md
(+70 files in other folders)
